--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -1,4 +1,4 @@
-// This is the place to place Bootstrap-related CSS customizations.
+/*// This is the place to place Bootstrap-related CSS customizations.
 // As example you can start by importing the _bootswatch.scss file from one of the
 // theme provided by https://bootswatch.com .
 
@@ -325,4 +325,4 @@ legend {
   h1, h2, h3, h4, h5, h6 {
     color: inherit;
   }
-}
+}*/
