--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,4 +1,4 @@
-// This is the place to place Bootstrap's variables overrides.
+/*// This is the place to place Bootstrap's variables overrides.
 // As example you can start by importing the _variables.scss file from one of the
 // theme provided by https://bootswatch.com .
 
@@ -108,4 +108,4 @@ $pagination-disabled-border-color:  $pagination-disabled-bg !default;
 
 $breadcrumb-bg:                     $primary !default;
 $breadcrumb-divider-color:          $white !default;
-$breadcrumb-active-color:           $breadcrumb-divider-color !default;
+$breadcrumb-active-color:           $breadcrumb-divider-color !default;*/
